Fixes logout alignment

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -41,7 +41,6 @@ body {
 
     .app_name {
       @include column(4);
-      margin-left: 5px;
 
       a {
         color: #fff;
